syntax = "proto3";
package services;

enum BackupStatus {
  FAILED = 0;
  ZIPPING = 1;
  UPLOADING = 2;
  DONE = 3;
}

message EmptyReq {}

message PingReq {}

message PongResp {}

message ServiceResp {
  int64 request_id = 1;
  int64 status = 2;
  string message = 3;
}

message StartConfig {
  int64 mem_alloc = 1;
}

message StatusResp {
  string server_state = 1;
  string message = 2;
}

message BackupResp {
  BackupStatus status = 1;
  string message = 2;
  string link_url = 3;
}

service McsService {
  rpc Ping(PingReq) returns (PongResp) {}
  rpc Start(StartConfig) returns (ServiceResp) {}
  rpc Stop(EmptyReq) returns (ServiceResp) {}
  rpc Status(EmptyReq) returns (StatusResp) {}
  rpc Backup(EmptyReq) returns (BackupResp) {}
}
